# ari-skills

./: .gitignore  GOVERNANCE.md  README.md  SECURITY.md  index.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-merge.yml  sign-and-publish.yml  validate.yml
bundles/: dev.heyari.alarm-0.1.0.tar.gz.sha256  dev.heyari.alarm-0.1.0.tar.gz.sig  dev.heyari.alarm-0.1.1.tar.gz.sha256  dev.heyari.alarm-0.1.1.tar.gz.sig  dev.heyari.assistant.chatgpt-0.1.0.tar.gz.sha256  dev.heyari.assistant.chatgpt-0.1.0.tar.gz.sig  dev.heyari.assistant.chatgpt-0.2.0.tar.gz.sha256  dev.heyari.assistant.chatgpt-0.2.0.tar.gz.sig  dev.heyari.assistant.chatgpt-0.3.0.tar.gz.sha256  dev.heyari.assistant.chatgpt-0.3.0.tar.gz.sig  dev.heyari.assistant.claude-0.1.0.tar.gz.sha256  dev.heyari.assistant.claude-0.1.0.tar.gz.sig  dev.heyari.assistant.claude-0.2.0.tar.gz.sha256  dev.heyari.assistant.claude-0.2.0.tar.gz.sig  dev.heyari.assistant.claude-0.3.0.tar.gz.sha256  dev.heyari.assistant.claude-0.3.0.tar.gz.sig  dev.heyari.assistant.gemini-0.1.0.tar.gz.sha256  dev.heyari.assistant.gemini-0.1.0.tar.gz.sig  dev.heyari.assistant.gemini-0.2.0.tar.gz.sha256  dev.heyari.assistant.gemini-0.2.0.tar.gz.sig  dev.heyari.assistant.gemini-0.3.0.tar.gz.sha256  dev.heyari.assistant.gemini-0.3.0.tar.gz.sig  dev.heyari.coinflip-0.1.0.tar.gz.sha256  dev.heyari.coinflip-0.1.0.tar.gz.sig  dev.heyari.counter-0.1.0.tar.gz.sha256  dev.heyari.counter-0.1.0.tar.gz.sig  dev.heyari.counter-0.1.1.tar.gz.sha256  dev.heyari.counter-0.1.1.tar.gz.sig  dev.heyari.githubzen-0.1.0.tar.gz.sha256  dev.heyari.githubzen-0.1.0.tar.gz.sig  dev.heyari.githubzen-0.1.1.tar.gz.sha256  dev.heyari.githubzen-0.1.1.tar.gz.sig  dev.heyari.homeassistant-0.1.0.tar.gz.sha256  dev.heyari.homeassistant-0.1.0.tar.gz.sig  dev.heyari.homeassistant-0.2.0.tar.gz.sha256  dev.heyari.homeassistant-0.2.0.tar.gz.sig  dev.heyari.homeassistant-0.2.1.tar.gz.sha256  dev.heyari.homeassistant-0.2.1.tar.gz.sig  dev.heyari.homeassistant-0.3.0.tar.gz.sha256  dev.heyari.homeassistant-0.3.0.tar.gz.sig  (+22 more)
docs/: README.md  action-responses.md  assemblyscript.md  assistant-skills.md  i18n.md  internals.md  publishing.md  reference-actions.md  reference-capabilities.md  reference-manifest.md  reference-sdk.md  skill-authors.md  skill-system.md  troubleshooting.md  tutorial-declarative.md  tutorial-wasm.md  wasm-sdk.md
manifests/: dev.heyari.alarm-0.1.1.md  dev.heyari.assistant.chatgpt-0.1.0.md  dev.heyari.assistant.chatgpt-0.3.0.md  dev.heyari.assistant.claude-0.1.0.md  dev.heyari.assistant.gemini-0.1.0.md  dev.heyari.coinflip-0.1.0.md  dev.heyari.counter-0.1.0.md  dev.heyari.githubzen-0.1.1.md  dev.heyari.homeassistant-0.1.0.md  dev.heyari.homeassistant-0.2.0.md  dev.heyari.homeassistant-0.3.0.md  dev.heyari.homeassistant-0.3.1.md  dev.heyari.reminder-0.1.0.md  dev.heyari.reminder-0.2.0.md  dev.heyari.reminder-0.3.0.md
sdk/assemblyscript/: package.json
sdk/assemblyscript/assembly/: http.ts  index.ts  storage.ts  tsconfig.json
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs  presentation.rs
skills/alarm/: Cargo.toml  SKILL.en.md  SKILL.it.md  build.sh  skill.wasm
skills/alarm/src/: lib.rs  parse.rs
skills/alarm/strings/: en.json  it.json
skills/chatgpt/: SKILL.it.md  SKILL.md
skills/claude/: SKILL.en.md  SKILL.it.md  SKILL.md
skills/coin-flip/: SKILL.en.md  SKILL.it.md  SKILL.md
skills/coin-flip/strings/: en.json  it.json
skills/counter/: SKILL.en.md  SKILL.it.md  SKILL.md  skill.wasm  skill.wat
skills/gemini/: SKILL.en.md  SKILL.it.md  SKILL.md
skills/github-zen/: SKILL.it.md  SKILL.md  skill.wasm  skill.wat
skills/home-assistant/: Cargo.toml  SKILL.en.md  SKILL.it.md  build.sh  skill.wasm
skills/home-assistant/src/: lib.rs  logic.rs
skills/home-assistant/strings/: en.json  it.json
skills/music/: Cargo.toml  SKILL.en.md  SKILL.it.md  build.sh  skill.wasm
skills/music/src/: action.rs  lib.rs  parse.rs  resolve.rs  transport.rs
skills/music/strings/: en.json  it.json
skills/navigation/: Cargo.toml  SKILL.en.md  SKILL.it.md  build.sh  skill.wasm
skills/navigation/src/: lib.rs  parse.rs
skills/navigation/strings/: en.json  it.json
skills/reminder/: Cargo.toml  SKILL.en.md  SKILL.it.md  SKILL.md  build.sh  skill.wasm
skills/reminder/examples/: shapes.rs
skills/reminder/src/: layer_c.rs  lib.rs  parse.rs  query.rs
skills/reminder/strings/: en.json  it.json
skills/smoke-test/: SKILL.md
skills/timer/: Cargo.toml  SKILL.en.md  SKILL.it.md  SKILL.md  build.sh  skill.wasm
skills/timer/src/: action.rs  lib.rs  parse.rs  state.rs
skills/timer/strings/: en.json  it.json
skills/wasm-echo/: Cargo.toml  SKILL.en.md  SKILL.it.md  SKILL.md  build.sh  skill.wasm  skill.wat
skills/wasm-echo/.cargo/: config.toml
skills/wasm-echo/src/: lib.rs
skills/wasm-echo/strings/: en.json  it.json
skills/weather/: Cargo.toml  SKILL.en.md  SKILL.it.md  build.sh  skill.wasm
skills/weather/assets/icons/: LICENSE
skills/weather/src/: conditions.rs  dates.rs  facets.rs  forecast.rs  lib.rs  metno.rs  openmeteo.rs  present.rs  router.rs  units.rs
skills/weather/src/fixtures/: geocode_none.json  geocode_tokyo.json  metno_complete.json  openmeteo_forecast.json
skills/weather/strings/: en.json  it.json
templates/assemblyscript/: SKILL.md  package.json
templates/assemblyscript/assembly/: index.ts
templates/countdown/: Cargo.toml  SKILL.en.md  build.sh  skill.wasm
templates/countdown/src/: lib.rs
templates/dice-roll/: SKILL.en.md
templates/dice-roll/strings/: en.json
templates/echo-as/: SKILL.en.md  build.sh  package.json  skill.wasm
templates/echo-as/assembly/: index.ts
templates/rust/: Cargo.toml  SKILL.md  build.sh
templates/rust-action/: Cargo.toml  SKILL.md  build.sh
templates/rust-action/src/: lib.rs
templates/rust/src/: lib.rs
templates/tally/: Cargo.toml  SKILL.en.md  build.sh  skill.wasm
templates/tally/src/: lib.rs
templates/tally/strings/: en.json
tools/: build-index.sh  sideload-android  validate
