[package]
name = "my-ari-action-skill"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ari-skill-sdk = { path = "../../sdk/rust", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Uncomment if your skill needs storage or http:
# ari-skill-sdk = { path = "../../sdk/rust", default-features = false, features = ["storage"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
