[package]
name = "my-ari-action-skill"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# `presentation` exposes the typed envelope/card/alert builders the example
# below uses. Add `storage` and/or `http` if your skill needs them.
ari-skill-sdk = { path = "../../sdk/rust", default-features = false, features = ["presentation"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
